src/demo-elk/templates/logstash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - "local-elk-logstash.balazskrizsan.com"
      secretName: cert
  rules:
    - host: "local-elk-logstash.balazskrizsan.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logstash
                port:
                  number: 9600
